Break CI on purpose for practice

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
         
       - name: Run simple check
         run: |
-          echo "CI pipeline triggered"
-          ls -R    
+          echo "Breaking CI on purpose"
+          exit 1    
