--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
         
       - name: Run simple check
         run: |
-          echo "Breaking CI on purpose"
-          exit 1    
+          echo "CI pipeline triggered"
+          ls -R
